# context-reliability-testing

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  pyproject.toml
.cursor/agents/: find-bugs.md
.cursor/commands/: arxiv-context-scan.md  code-review.md  research-checker.md
.cursor/skills/arxiv-context-scan/: SKILL.md
.cursor/skills/arxiv-context-scan/scripts/: arxiv-search.py  arxiv-search.sh
.github/workflows/: ci.yml
examples/: context-file.sample.md  eval-set.sample.yaml  heuristics-config.sample.yaml  run-config.sample.yaml  timeline-tasks.sample.yaml
examples/drivers/: claude-code.yaml  cursor-agent.yaml  custom-script.yaml
schema/: result.schema.json  run-config.schema.json  sequential-task.schema.json  task.schema.json
src/context_reliability_testing/: __init__.py  acceptance.py  assertions.py  cli.py  conditions.py  divergence.py  executor.py  heuristics.py  init.py  models.py  progress.py  pytest_plugin.py  report.py  resolve.py  runner.py  timeline.py  trial_bundle.py  trial_context.py  workspace.py
src/context_reliability_testing/drivers/: __init__.py  adapters.py  base.py  stub.py  subprocess.py
src/context_reliability_testing/templates/: heuristics.md.j2  summary.md.j2  timeline.md.j2
tests/: test_acceptance.py  test_assertions.py  test_divergence.py  test_drivers.py  test_gap_fixes.py  test_heuristics.py  test_init.py  test_models.py  test_runner.py  test_workspace.py
